<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreference
        android:icon="@drawable/ic_baseline_battery_alert_24"
        android:key="@string/pref_config_key_advertise_is_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_advertise_is_enabled"
        android:title="@string/pref_config_title_advertise_is_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_data_saver_on_24"
        android:key="@string/pref_config_key_datasaver_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_datasaver_enabled"
        android:title="@string/pref_config_title_datasaver_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_mode_night_24"
        android:key="@string/pref_config_key_enable_night_mode"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_enable_night_mode"
        android:title="@string/pref_config_title_enable_night_mode" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_flight_takeoff_24"
        android:key="@string/pref_config_key_launch_boost_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_launch_boost_enabled"
        android:title="@string/pref_config_title_launch_boost_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_vibration_24"
        android:key="@string/pref_config_key_vibration_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_vibration_enabled"
        android:title="@string/pref_config_title_vibration_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_animation_24"
        android:key="@string/pref_config_key_animation_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_animation_enabled"
        android:title="@string/pref_config_title_animation_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_volume_up_24"
        android:key="@string/pref_config_key_soundtrigger_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_soundtrigger_enabled"
        android:title="@string/pref_config_title_soundtrigger_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:key="@string/pref_config_key_fullbackup_deferred"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_fullbackup_deferred"
        android:title="@string/pref_config_title_fullbackup_deferred" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_vpn_key_24"
        android:key="@string/pref_config_key_keyvaluebackup_deferred"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_keyvaluebackup_deferred"
        android:title="@string/pref_config_title_keyvaluebackup_deferred" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_security_24"
        android:key="@string/pref_config_key_firewall_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_firewall_enabled"
        android:title="@string/pref_config_title_firewall_enabled" />
    <ListPreference
        android:entries="@array/location_modes_entries"
        android:entryValues="@array/location_modes_values"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:key="@string/pref_config_key_gps_mode"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_gps_mode"
        android:title="@string/pref_config_title_gps_mode" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_brightness_low_24"
        android:key="@string/pref_config_key_adjust_brightness_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_adjust_brightness_enabled"
        android:title="@string/pref_config_title_adjust_brightness_enabled" />
    <SeekBarPreference
        android:dependency="@string/pref_config_key_adjust_brightness_enabled"
        android:key="@string/pref_config_key_adjust_brightness_factor"
        android:max="100"
        android:summary="@string/pref_config_summary_adjust_brightness_factor"
        android:title="@string/pref_config_title_adjust_brightness_factor"
        app:showSeekBarValue="true" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_bed_24"
        android:key="@string/pref_config_key_force_all_apps_standby"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_force_all_apps_standby"
        android:title="@string/pref_config_title_force_all_apps_standby" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_checklist_24"
        android:key="@string/pref_config_key_force_background_check"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_force_background_check"
        android:title="@string/pref_config_title_force_background_check" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_sensors_24"
        android:key="@string/pref_config_key_optional_sensors_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_optional_sensors_enabled"
        android:title="@string/pref_config_title_optional_sensors_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_aod_24"
        android:key="@string/pref_config_key_aod_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_aod_enabled"
        android:title="@string/pref_config_title_aod_enabled" />
    <SwitchPreference
        android:icon="@drawable/ic_baseline_snooze_24"
        android:key="@string/pref_config_key_quick_doze_enabled"
        android:layout="@layout/preference_base"
        android:summary="@string/pref_config_summary_quick_doze_enabled"
        android:title="@string/pref_config_title_quick_doze_enabled" />
</PreferenceScreen>