<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="pill"
        android:src="@drawable/pin" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="16dp"
        android:text="@string/smart_charging_title"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartChargingSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkable="true"
                android:summary="@string/smart_charging_footer"
                android:title="@string/smart_charging_switch_title" />

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartChargingStopTrigger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="100"
                android:min="65"
                android:progress="80"
                android:title="@string/smart_charging_level_title"
                app:seekable="true" />

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartChargingStartTrigger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="99"
                android:min="1"
                android:progress="60"
                android:title="@string/smart_charging_resume_level_title"
                app:seekable="true" />

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartChargingResetStats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkable="true"
                android:summary="@string/smart_charging_reset_stats_summary"
                android:title="@string/smart_charging_reset_stats_title" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>