<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="pill"
        android:src="@drawable/pin" />

    <TextView
        android:id="@+id/list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:paddingStart="32dp"
        android:paddingTop="16dp"
        android:paddingEnd="32dp"
        android:paddingBottom="16dp"
        android:text="@string/smart_cutoff_title"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartCutoffSwitch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkable="true"
                android:title="@string/smart_cutoff_switch_title" />

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartCutoffStopTrigger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="45"
                android:min="25"
                android:progress="30"
                android:title="@string/smart_cutoff_level_title"
                app:seekable="true" />

            <com.dot.lifesaver.views.DotMaterialPreference
                android:id="@+id/smartCutoffStartTrigger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="35"
                android:min="20"
                android:progress="25"
                android:title="@string/smart_cutoff_resume_level_title"
                app:seekable="true" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>